# renata-geral

.claude/: settings.local.json
warp-file-watcher-fix/: Cargo.toml  README.md
warp-file-watcher-fix/src/: lib.rs  main.rs
warp-file-watcher-fix/src/repo_metadata/: file_tree_store.rs  mod.rs  model.rs  watcher.rs
warp-file-watcher-fix/src/ui/: mod.rs  project_explorer.rs
